fixing size-flickering on Polaroid focus

--- a/src/main/App.css
+++ b/src/main/App.css
@@ -189,7 +189,8 @@
         transition: 850ms ease;
 
         /*transform: skewY(25deg) translateY(-40vh);*/
-        transform: skewY(15deg);
+        /*transform: skewY(15deg);*/
+        transform: none;
     }
 
 }
@@ -250,7 +251,7 @@
         transition: 850ms ease;
 
         /*transform: skewY(25deg) translateY(-40vh);*/
-        transform: skewY(15deg);
+        /*transform: skewY(15deg);*/
     }
 
 }
