--- a/src/main/Polaroid.css
+++ b/src/main/Polaroid.css
@@ -89,7 +89,7 @@
 /* -------- MOBILE ----------- */
 @media screen and (max-width: 480px) {
     .polaroid-card {
-        width: 160px;
+        width: 100%;
         position: absolute;
         top: 0;
         bottom: 0;
@@ -106,6 +106,6 @@
         clip-path: circle(500% at 49% 47%);
         transition: 850ms ease-in-out;
         display: inline-block;
-        width: 200px;
+        width: 100%;
     }
 }
