--- a/src/main/index.css
+++ b/src/main/index.css
@@ -4,6 +4,7 @@
     /*font-family: 'Overpass', sans-serif;*/
     font-family: 'Roboto Flex', sans-serif;
     margin: 0;
+    padding: 0;
     -webkit-font-smoothing: antialiased;
 }
 
